gtksettings: fix critical warning

Commit 5186aeb90f52c941a2642b04ebfb54e9d8f8ea11 introduced critical
warning - g_value_copy: assertion 'g_value_type_compatible (...)' failed.

https://bugzilla.gnome.org/show_bug.cgi?id=761381